Initial work on UI and ViewModel.

--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -102,6 +102,10 @@
     </Compile>
     <Compile Include="Media\CameraReceiver.cs" />
     <Compile Include="Media\Frequencies.cs" />
+    <Compile Include="Models\FeedModel.cs" />
+    <Compile Include="Models\SnapshotModel.cs" />
+    <Compile Include="Models\ViewModel.cs" />
+    <Compile Include="Controls\NullTemplateSelector.cs" />
     <Compile Include="Pages\FirstRun.xaml.cs">
       <DependentUpon>FirstRun.xaml</DependentUpon>
     </Compile>
@@ -110,6 +114,9 @@
     </Compile>
     <Compile Include="Pages\RecordingPage.xaml.cs">
       <DependentUpon>RecordingPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ViewerPage.xaml.cs">
+      <DependentUpon>ViewerPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Processing\AnalysisProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -145,6 +152,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Pages\RecordingPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\ViewerPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
